[package]
name = "spa"
version = "0.5.1"
authors = ["Frank Rehberger <frehberg@gmail.com>"]
description = "The Solar Position Algorithm module (SPA) for Rust calculates the sunrise-sunset and azimuth and zenith-angle for specific geo-position and time (UTC); for example for solar-panel-alignment or automotive."
license = "Apache-2.0"
edition = '2021'
keywords = ["solar", "algorithm", "azimuth", "zenith", "sunrise"]

documentation = "https://docs.rs/spa/"
homepage = "https://github.com/frehberg/spa-rs"
repository = "https://github.com/frehberg/spa-rs"

[features]
default = ["std"]
std = ["thiserror"]
chrono = ["dep:chrono"]

[dependencies]
chrono = { version = "^0.4", default-features = false, optional = true }
thiserror = { version = "1", optional = true }

[dev-dependencies]
thiserror = "1"
chrono = { version = "^0.4", default-features = false }
chrono-tz = { version = "^0.10" }

[[example]]
name = "solar_pos"
required-features = ["std"]

[[example]]
name = "sunrise_and_set"
required-features = ["std", "chrono"]
